# set10108-Labs

labs/cw1/: CMakeLists.txt  main.cu  main_cpu.cpp  main_gpu.cpp  main_gpu.cu  main_gpu_optimised.cu
labs/cw2/: CMakeLists.txt  colour_temperature.cpp  colour_temperature.cu  cw2_cpu.cpp  cw2_main.cpp  cw2_optimised.cpp  cw2_unoptimised.cpp  main.cpp
labs/cw2/TestResults/GamesLab/: GamesLabSpecs.txt
labs/cw2/TestResults/Home/: specs.txt
labs/unit2/: CMakeLists.txt  mat-multiply.cu
